add webpack to solve bare import issue that prevents browser from recognizing import .. from 'three' and displaying gltf. known issue: water-me.js not working

--- a/thesis/threejs-frontend/water-me.html
+++ b/thesis/threejs-frontend/water-me.html
@@ -1,30 +1,31 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./water-me.js"></script>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
-    <title> Water Me Dashboard </title>
-  </head>
-  <body>
-    <form>
-      <h2>Record a splash 💦</h2>
-      <p>What is the status of the plant?</p>
-      <input type="radio" id="good" name="plant-status" value="Good" required checked>
-      <label for="good">Good</label><br>
-      <input type="radio" id="not-good" name="plant-status" value="Not good" required>
-      <label for="not-good">Not good</label><br><br>
-    </form>
-    <button id="button-submit">Submit</button>
-    <button id="button-return" onclick="location.href='./index.html'">Return</button>
-    <div id="dashboard-footer">Powered by 
-      <a href="https://liquidstudio.nl/" target="_blank">
-        <img id ="ls-logo" src="../assets/images/ls-nl.PNG" alt="liquid-studio-logo" width="102" height="50">
-      </a>
-    </div>
-  </body>
+<head>
+  <!-- <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> Water Me Dashboard </title>
+  <script src="./dist/bundle.js"></script>
+  <link rel="stylesheet" href="./assets/styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
+</head>
+<body>
+  <form>
+    <h2>Record a splash 💦</h2>
+    <p>What is the status of the plant?</p>
+    <input type="radio" id="good" name="plant-status" value="Good" required checked>
+    <label for="good">Good</label><br>
+    <input type="radio" id="not-good" name="plant-status" value="Not good" required>
+    <label for="not-good">Not good</label><br><br>
+  </form>
+  <button id="button-submit">Submit</button>
+  <button id="button-return" onclick="location.href='./index.html'">Return</button>
+  <div id="dashboard-footer">Powered by 
+    <a href="https://liquidstudio.nl/" target="_blank">
+      <img id ="ls-logo" src="../assets/images/ls-nl.PNG" alt="liquid-studio-logo" width="102" height="50">
+    </a>
+  </div>
+</body>
 </html>
