--- a/thesis/threejs-frontend/index.html
+++ b/thesis/threejs-frontend/index.html
@@ -1,26 +1,15 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- mindar-image-three-prod.js@1.1.5 has three.js@0.136.0 as dependency -->
 		<script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script>
-		<!-- IMPORT THRU IMPORT MAP REALLY SLOWS > CAN'T CLICK ON DASHBOARD AT ALL SINCE IT TAKES SO LONG FOR MINDAR ENGINE TO BOOT -->
-		<!-- Import three which must match mindar's three dependency (i.e., three@0.136.0) in order for loader.js and GLTFLoader.js to work -->
-		<!-- <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@0.136.0/build/three.module.js"
-        }
-      }
-    </script> -->
-		<script src="./main.js" type="module"></script>
-		<link rel="stylesheet" href="./styles.css">
+		<script src="./dist/bundle.js" type="module"></script>
+		<link rel="stylesheet" href="./assets/styles/styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
-		<title>Main Dashboard</title>
+		<title>Home Dashboard</title>
 	</head>
 	<body>
 		<div id="dashboard">
@@ -91,4 +80,3 @@
 		</div>
 	</body>
 </html>
-
