--- a/thesis/threejs-frontend/waterme.html
+++ b/thesis/threejs-frontend/waterme.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Water Me Dashboard </title>
-  <script src="./dist/bundle.js"></script>
+  <script src="./dist/waterme.bundle.js"></script>
   <link rel="stylesheet" href="./assets/styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
