--- a/mindar-course/course-material/applications/lectures-end-kp/500-video-feed/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/500-video-feed/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../../libs/mindar/mindar-image-three.prod.js"></script>
-    <!-- tensorflow.js already included in mindar.js since tensorflow.js is a dependency of mindar.js -->
+    <!-- tensorflow.js already included in mindar.js since tensorflow.js is a dependency of mindar.js WHY NEED THIS? -->
     <script> window.tf = window.MINDAR.IMAGE.tf; </script>
     <!-- Import script for hand-pose model -->
     <script src="https://unpkg.com/@tensorflow-models/handpose@0.0.6/dist/handpose.js"></script>
