--- a/thesis/threejs-frontend/index.html
+++ b/thesis/threejs-frontend/index.html
@@ -3,6 +3,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- mindar-image-three-prod.js@1.1.5 has three.js@0.136.0 as dependency -->
 		<script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script>
+		<!-- for hand gesture detection -->
+		<script> window.tf = window.MINDAR.IMAGE.tf; </script>
+    <script src="https://unpkg.com/@tensorflow-models/handpose@0.0.6/dist/handpose.js"></script>
+		<!-- TODO: replace fingerpose with CDN script -->
+    <script src='./assets/libs/fingerpose.js'></script>
+		<!-- end -->
 		<script src="./dist/index.bundle.js" type="module"></script>
 		<link rel="stylesheet" href="./assets/styles/styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
