--- a/thesis/threejs-frontend/index.html
+++ b/thesis/threejs-frontend/index.html
@@ -52,7 +52,7 @@
 			</div>	
 			<div id="dashboard-aboutme-page2" class="hidden">
 				<div class="dashboard-title">Who am I?</div>
-				<div id="" class="dashboard-text">Watch the video for some artworks about me 🎨.</div>
+				<div id="" class="dashboard-text">Watch the video for artworks about me and tips on how to care for me.</div>
 				<div id="vimeo-video">
 					<iframe src="https://player.vimeo.com/video/399995471?h=a0dd33ac0f&title=0&byline=0&portrait=0"
 								width="640"
@@ -68,17 +68,17 @@
 				<div class="dashboard-title">When was I last watered?</div>
 				<div class="watering-record">
 					<img id="status1" class="status-icon thumb-down" src="../assets/images/thumb-down.png" alt="plant-status"/>
-					<div id="record1">[Status "Not good" @ 30/10/22 8:00]</div>
+					<div id="record1">Status "Not good" @ 30/10/22 8:00</div>
 				</div>
 				<div class="watering-record">
 					<img id="status2" class="status-icon thumb-up" src="../assets/images/thumb-up.png" alt="plant-status"/>
-					<div id="record2">[Status "Good" @ 30/10/22 12:00]</div>
+					<div id="record2">Status "Good" @ 30/11/22 12:00</div>
 				</div>
 				<div class="watering-record">
 					<img id="status3" class="status-icon thumb-up" src="../assets/images/thumb-up.png" alt="plant-status"/>
-					<div id="record3">[Status "Good" @ 30/10/22 17:00]</div>
+					<div id="record3">Status "Good" @ 10/12/22 08:00</div>
 				</div>
-				<div id="watering-history-timestamp">[Last update: 30/10/22 18:00]</div>
+				<div id="watering-history-timestamp">Last update: 10/12/22 08:00</div>
 				<div class="dashboard-viewhistory-buttons">
 					<button id="viewhistory-return-button" class="button">Return &gt;</button>
 				</div>	
