--- a/thesis/threejs-frontend/index.html
+++ b/thesis/threejs-frontend/index.html
@@ -33,8 +33,8 @@
 			<div id="dashboard-home">
 				<div class="dashboard-title">How am I feeling?</div>
 				<img id="water-cup" src="../assets/images/water-high.png" alt="water-cup"/>
-				<div id="moisture-reading">Soil moisture: </div>
-				<div id="moisture-timestamp">Last update: </div>
+				<div id="moisture-reading">Soil moisture: ...</div>
+				<div id="moisture-timestamp">Last update: ...</div>
 				<div id="dashboard-home-buttons">
 					<button id="home-waterme-button" class="button">Water Me</button>
 					<button id="home-viewhistory-button" class="button">View History</button>
@@ -68,17 +68,17 @@
 				<div class="dashboard-title">When was I last watered?</div>
 				<div class="watering-record">
 					<img id="status1" class="status-icon thumb-down" src="../assets/images/thumb-down.png" alt="plant-status"/>
-					<div id="record1">Status "Not good" @ 30/10/22 8:00</div>
+					<div id="record1">...</div>
 				</div>
 				<div class="watering-record">
 					<img id="status2" class="status-icon thumb-up" src="../assets/images/thumb-up.png" alt="plant-status"/>
-					<div id="record2">Status "Good" @ 30/11/22 12:00</div>
+					<div id="record2">...</div>
 				</div>
 				<div class="watering-record">
 					<img id="status3" class="status-icon thumb-up" src="../assets/images/thumb-up.png" alt="plant-status"/>
-					<div id="record3">Status "Good" @ 10/12/22 08:00</div>
+					<div id="record3">...</div>
 				</div>
-				<div id="watering-history-timestamp">Last update: 10/12/22 08:00</div>
+				<div id="watering-history-timestamp">Last update: ...</div>
 				<div class="dashboard-viewhistory-buttons">
 					<button id="viewhistory-return-button" class="button">Return &gt;</button>
 				</div>	
