modify alert() for successful/ failed when adding new watering record

--- a/thesis/threejs-frontend/index.html
+++ b/thesis/threejs-frontend/index.html
@@ -34,7 +34,7 @@
 				<div class="dashboard-title">How am I feeling?</div>
 				<img id="water-cup" src="../assets/images/water-high.png" alt="water-cup"/>
 				<div id="moisture-reading">Soil moisture: ...</div>
-				<div id="moisture-timestamp">Last update: ...</div>
+				<div id="moisture-timestamp">As of: ...</div>
 				<div id="dashboard-home-buttons">
 					<button id="home-waterme-button" class="button">Water Me</button>
 					<button id="home-viewhistory-button" class="button">View History</button>
