--- a/thesis/threejs-frontend/waterme.html
+++ b/thesis/threejs-frontend/waterme.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <!-- <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+  <meta charset="UTF-8">
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Water Me Dashboard </title>
   <script src="./dist/waterme.bundle.js"></script>
@@ -13,7 +13,7 @@
 </head>
 <body>
   <form>
-    <h2>Record a splash 💦</h2>
+    <h2>Record a splash &#x1F4A7;</h2>
     <p>What is the status of the plant?</p>
     <input type="radio" id="good" name="plant-status" value="Good" required checked>
     <label for="good">Good</label><br>
