replace thumb-down.PNG with thumb-down.png; same for thumb-up to resolve the issue of thumb icons not loading properly

--- a/thesis/threejs-frontend/index.html
+++ b/thesis/threejs-frontend/index.html
@@ -68,15 +68,15 @@
 			<div id="dashboard-viewhistory" class="hidden">
 				<div class="dashboard-title">When was I last watered?</div>
 				<div class="watering-record">
-					<img id="status1" class="status-icon thumb-down" src="../assets/images/thumb-down.PNG" alt="plant-status"/>
+					<img id="status1" class="status-icon thumb-down" src="../assets/images/thumb-down.png" alt="plant-status"/>
 					<div id="record1">...</div>
 				</div>
 				<div class="watering-record">
-					<img id="status2" class="status-icon thumb-up" src="../assets/images/thumb-up.PNG" alt="plant-status"/>
+					<img id="status2" class="status-icon thumb-up" src="../assets/images/thumb-up.png" alt="plant-status"/>
 					<div id="record2">...</div>
 				</div>
 				<div class="watering-record">
-					<img id="status3" class="status-icon thumb-up" src="../assets/images/thumb-up.PNG" alt="plant-status"/>
+					<img id="status3" class="status-icon thumb-up" src="../assets/images/thumb-up.png" alt="plant-status"/>
 					<div id="record3">...</div>
 				</div>
 				<div class="dashboard-viewhistory-buttons">
